<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="p15232006.galagaclone.View.GameOverActivity">


    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/appCompatTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/score"
        android:layout_alignBottom="@+id/score"
        android:layout_alignParentStart="true"
        android:layout_marginStart="76dp"
        android:text="@string/game_over"
        android:textColor="@color/colorYellow" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="45dp"
        android:layout_toEndOf="@+id/appCompatTextView2"
        android:textColor="@color/colorYellow" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/appCompatTextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/appCompatTextView2"
        android:layout_below="@+id/appCompatTextView2"
        android:text="@string/play_again"
        android:textColor="@color/colorYellow" />

<android.support.v7.widget.AppCompatButton
        android:id="@+id/beginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:onClick="beginGame"
        android:text="@string/again_button" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/nextLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="nextLevel"
        android:text="@string/next_level"
        android:visibility="gone"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/exitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:onClick="home"
        android:text="@string/home_button" />
</RelativeLayout>