<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="p15232006.galagaclone.View.MenuActivity">

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/beginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/settingsButton"
        android:layout_alignBottom="@+id/settingsButton"
        android:layout_alignParentStart="true"
        android:onClick="beginGame"
        android:text="@string/begin_button" />
    <android.support.v7.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:text="@string/settings_button"
        android:id="@+id/settingsButton"
        android:onClick="runSettings"
        />
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/settingsButton"
        android:layout_alignBottom="@+id/settingsButton"
        android:layout_alignParentEnd="true"
        android:onClick="home"
        android:text="@string/home_button" />

</RelativeLayout>
